engines/ep/src/ephemeral_vb.cc
@@ -19,6 +19,7 @@
 
 #include "checkpoint.h"
 #include "dcp/backfill_memory.h"
+#include "ep_time.h"
 #include "ephemeral_tombstone_purger.h"
 #include "executorpool.h"
 #include "failover-table.h"
@@ -529,6 +530,16 @@ std::tuple<StoredValue*, VBNotifyCtx> EphemeralVBucket::softDeleteStoredValue(
 
         if (queueItmCtx.genBySeqno == GenerateBySeqno::No) {
             newSv->setBySeqno(bySeqno);
+        }
+
+        // Replica/DelWithMeta can dictate the tombstone time, check for it.
+        if (queueItmCtx.generateDeleteTime == GenerateDeleteTime::No &&
+            newSv->isDeleted() && newSv->getExptime()) {
+            // The deleted time is relative and the replicated tombstone time is
+            // absolute and held in the expiry field, convert the abs to rel
+            // using ep_reltime
+            newSv->toOrderedStoredValue()->setDeletedTime(
+                    ep_reltime(newSv->getExptime(), {}));
         }
 
         notifyCtx = queueDirty(*newSv, queueItmCtx);
